--- a/layouts/partials/home/mainswiper.html
+++ b/layouts/partials/home/mainswiper.html
@@ -14,7 +14,10 @@
                     <button class="button21">{{ T "gezieltSpenden" }}</button>
                 </div>
             </div>
-            <div class="swiper-pagination"></div>
+            <!-- <div class="main-swiper-pagination"></div> -->
+            <!-- Navigation Pfeile -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
     </section>
     <script>
