--- a/layouts/partials/common/header.html
+++ b/layouts/partials/common/header.html
@@ -2,11 +2,10 @@
     <header class="header">
         <div class="header-container">
             <nav class="header-menu gray">
-                <a href="" id="js-de" class="header-gray-item">DE</a>
-                <a href="" id="js-en" class="header-gray-item"></a>
-                <a href="" id="js-fr" class="header-gray-item"></a>
-                <a href="" class="header-gray-item"></a> 
-                <!-- <i id="js-darkMode" class="far fa-moon"></i> -->
+                <!-- <a href="" id="js-de" class="header-gray-item">DE</a>
+                <a href="" id="js-en" class="header-gray-item">EN</a>
+                <a href="" id="js-fr" class="header-gray-item">FR</a>
+                <a href="" class="header-gray-item"><i id="js-darkMode" class="far fa-moon"></i></a> -->
             </nav>
             <a href="/" class="logo">
                 <img class="img-logo" src="/img/logo.png" alt="Haus der Sonne">
