--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -37,21 +37,21 @@ $themes: (
     footer-background: rgba(8,129,98, 1),
   ),
   dark: (
-    text-white: grey,
-    text-black: lightgrey,
-    text-main-menu: grey,
+    text-white: rgb(188, 188, 188),
+    text-black: rgb(188, 188, 188),
+    text-main-menu: rgb(188, 188, 188),
     background-logo-white: rgb(185, 182, 149),
-    table-line: lightgrey,
-    logo-green: rgb(3, 44, 34),
-    logo-green-60: rgba(3, 44, 34, 0.6),
-    logo-yellow: rgb(83, 69, 4),
-    logo-yellow-60: rgba(83, 69, 4, 0.6),
-    logo-yellow-30: rgba(83, 69, 4, 0.3),
+    table-line: rgb(188, 188, 188),
+    logo-green: rgb(5, 65, 50),
+    logo-green-60: rgba(5, 65, 50, 0.6),
+    logo-yellow: rgb(115, 95, 7),
+    logo-yellow-60: rgba(115, 95, 7, 0.6),
+    logo-yellow-30: rgba(115, 95, 7, 0.3),
     logo-red: rgb(115, 11, 23),
     logo-red-60: rgba(115, 11, 23, 0.6),
-    website-background: rgb(87, 86, 81),
-    textbox-background: rgb(87, 86, 81),
-    footer-background: rgb(3, 44, 34),
+    website-background: rgb(121, 120, 114),
+    textbox-background: rgb(121, 120, 114),
+    footer-background: rgb(5, 65, 50),
   ),
 );
 
