--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -84,7 +84,7 @@
                                     <a href="Versorgung/brunnenbau_6">{{ T "wwDCleanWater" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#" style="color: lightgray;">{{ T "wwDMedicine" }}</a>
+                                    <a href="Versorgung/medizinischeVersorgung">{{ T "wwDMedicine" }}</a>
                                 </li>
                             </ul>
                         </div>
